# inkb

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.trae/specs/migrate-to-seekdb/: checklist.md  spec.md  tasks.md
.trae/specs/tauri-migration/: checklist.md  spec.md  tasks.md
apps/server/: package-lock.json  package.json  pnpm-lock.yaml  test-lancedb.js  tsconfig.json
apps/server/public/: index.html
apps/server/public/assets/: comments-_miB_NBq.js  index-D5AO5RY0.css  index-DNMlWiQR.js
apps/server/scripts/: copy-web-dist.mjs
apps/server/src/: index.ts
apps/web/: package-lock.json  package.json  pnpm-lock.yaml  test-novel.tsx
apps/web/src/: App.tsx  NoteEditor.tsx  RagChatPanel.tsx  i18n.ts  index.css  main.tsx
apps/web/src-tauri/src/: config.rs  db.rs  git_sync.rs  importer.rs
docs/: tech-stack.md
src/: App.css  App.tsx  I18nProvider.tsx  NoteEditor.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_wrap.rs
src-tauri/src/: ai.rs  config.rs  git_sync.rs  importer.rs  lib.rs  notes.rs  watcher.rs
