[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
gray_matter = "0.2"
notify = "6.1"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.20"
lopdf = "0.33"
async-openai = "0.24"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
url = "2.5"
serde_yaml = "0.9"
env_logger = "0.11.10"

